--- a/src/app/pages/index-page/index-page.component.html
+++ b/src/app/pages/index-page/index-page.component.html
@@ -1,5 +1,17 @@
+<mat-toolbar color="primary">
+    <div class="container">
+        <div class="row" style="align-items: center; display: flex;">
+            <a routerLink="/" style="align-items: center; display: flex; color: unset; text-decoration: unset; gap: 1vw;">
+                <img src="assets/favicon.ico" alt="logo">
+                <h1 style="display: inline;">TODO</h1>
+            </a>
+            <span style="flex-grow: 1;"></span>
+            <button mat-raised-button color="accent" class="col-xs-1" routerLink="app">Sign In</button>
+        </div>
+    </div>
+</mat-toolbar>
 <div class="container">
     <div class="row">
-        <a routerLink="app">App</a>
+        App
     </div>
 </div>
