feat: complete app

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,8 @@
 <div class="container">
     <div class="row">
-        <p>home-page works!</p>
+        <p>
+            <button mat-button routerLink="board">Boards</button>
+            <button mat-button routerLink="board/new">Create</button>
+        </p>
     </div>
 </div>
