--- a/src/app/pages/account-page/account-page.component.html
+++ b/src/app/pages/account-page/account-page.component.html
@@ -1,5 +1,15 @@
 <div class="container">
     <div class="row">
-        <p>account-page works!</p>
+        <ng-container *ngIf="authService.user$ | async as user">
+            <mat-card>
+                <mat-card-header>
+                    <div mat-card-avatar style="background-image: url('{{ user.picture }}'); background-size: cover;"></div>
+                    <mat-card-title>{{ user.name }}</mat-card-title>
+                    <mat-card-subtitle>{{ user.email }}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content>
+                </mat-card-content>
+            </mat-card>
+        </ng-container>
     </div>
 </div>
