--- a/src/app/pages/app-page/app-page.component.html
+++ b/src/app/pages/app-page/app-page.component.html
@@ -32,7 +32,11 @@
     </mat-toolbar>
 
     <mat-drawer #drawer mode="over" class="col-xs-11 col-sm-8 col-md-3">
-
+        <ng-container *ngIf="boardService.find() | async as boards">
+            <mat-nav-list>
+                <a mat-list-item [routerLink]="board.id" *ngFor="let board of boards">{{ board.title }}</a>
+            </mat-nav-list>
+        </ng-container>
     </mat-drawer>
     
     <router-outlet></router-outlet>
