--- a/src/app/board/pages/board-page/board-page.component.html
+++ b/src/app/board/pages/board-page/board-page.component.html
@@ -6,10 +6,16 @@
                     <div class="container" style="display: flex; gap: 1vw; align-items: center;">
                         <ng-container *ngIf="{ editing: false } as vm">
                             <ng-container *ngIf="!vm.editing; else editBoardTitleTmpl">
-                                <h2 style="display: inline;">{{ board.title }}</h2>
-                                <button mat-icon-button color="primary" (click)="vm.editing = true">
-                                    <mat-icon>edit</mat-icon>
-                                </button>
+                                <div style="width: 100%; display: grid; grid-template-columns: repeat(2, max-content) auto max-content; align-items: center;">
+                                    <h2 style="display: inline;">{{ board.title }}</h2>
+                                    <button mat-icon-button color="primary" (click)="vm.editing = true">
+                                        <mat-icon>edit</mat-icon>
+                                    </button>
+                                    <span></span>
+                                    <button mat-icon-button color="primary" routerLink="settings">
+                                        <mat-icon>settings</mat-icon>
+                                    </button>
+                                </div>
                             </ng-container>
                             <ng-template #editBoardTitleTmpl>
                                 <form [formGroup]="boardForm" (submit)="vm.editing = false; boardForm.valid && updateBoard_.next(boardForm.value)">
