--- a/src/app/board/pages/board-list-page/board-list-page.component.html
+++ b/src/app/board/pages/board-list-page/board-list-page.component.html
@@ -2,8 +2,8 @@
     <div class="row">
         <p id="board-container" class="row" style="align-items: stretch; display: flex; flex-wrap: wrap;">
             <ng-container *ngIf="boards$ | async as boards; else loadingTmpl">
-                <button mat-raised-button color="accent" class="board col-xs-12 col-md-4 col-lg-3" routerLink="new">Create</button>
-                <div class="board col-xs-12 col-md-4 col-lg-3" *ngFor="let board of boards">
+                <button mat-raised-button color="accent" class="board col-xs-12 col-sm-4 col-md-3" routerLink="new">Create</button>
+                <div class="board col-xs-12 col-sm-4 col-md-3" *ngFor="let board of boards">
                     <a [routerLink]="board.id" style="color: unset; text-decoration: unset;">
                         <mat-card matRipple class="row">
                             <div class="col-xs-12" style="display: flex; flex-direction: row;">
