feat: add ngrx for boards

--- a/src/app/pages/app-page/app-page.component.html
+++ b/src/app/pages/app-page/app-page.component.html
@@ -32,7 +32,7 @@
     </mat-toolbar>
 
     <mat-drawer #drawer mode="over" class="col-xs-11 col-sm-8 col-md-3">
-        <ng-container *ngIf="boardService.find() | async as boards">
+        <ng-container *ngIf="boards$ | async as boards">
             <mat-nav-list>
                 <a (click)="drawer.close()" mat-list-item [routerLink]="['/app/board', board.id]" *ngFor="let board of boards">{{ board.title }}</a>
                 <a (click)="drawer.close()" mat-list-item [routerLink]="['/app/board/new']">Create</a>
