--- a/src/app/board/pages/board-page/board-page.component.html
+++ b/src/app/board/pages/board-page/board-page.component.html
@@ -1,67 +1,74 @@
-<ng-container *ngIf="{ board: board$ | async, states: states$ | async } as vm">
-    <ng-container *ngIf="vm.board as board; else loadingTmpl">
-        <div id="board-header">
-            <mat-card>
-                <div id="board-header-title-container">
-                    <div id="board-header-title">
-                        <button routerLink=".." mat-icon-button color="primary">
-                            <mat-icon>arrow_back</mat-icon>
+<ng-container *ngIf="{ 
+    board: board$ | async, 
+    states: states$ | async 
+} as vm">
+    <ng-container *ngIf="vm.board as board;">
+        <ng-container *ngIf="board.loading" [ngTemplateOutlet]="loadingTmpl">
+        </ng-container>
+        <ng-container *ngIf="board.loaded">
+            <div id="board-header">
+                <mat-card>
+                    <div id="board-header-title-container">
+                        <div id="board-header-title">
+                            <button routerLink=".." mat-icon-button color="primary">
+                                <mat-icon>arrow_back</mat-icon>
+                            </button>
+                            <h2>{{ board.data!.title }}</h2>
+                        </div>
+                        <button mat-icon-button color="primary" routerLink="settings">
+                            <mat-icon>settings</mat-icon>
                         </button>
-                        <h2>{{ board.data.title }}</h2>
                     </div>
-                    <button mat-icon-button color="primary" routerLink="settings">
-                        <mat-icon>settings</mat-icon>
-                    </button>
-                </div>
-            </mat-card>
-        </div>
-        <div id="columns-container">
-            <ng-container *ngIf="vm.states as states; else loadingTmpl">
-                <ng-container  *ngFor="let state of states.data; let odd = odd">
-                    <div class="column">
-                        <mat-toolbar [color]="odd ? 'primary' : 'accent'">
-                            <div>
-                                <h3>{{ state.data.title }}</h3>
-                            </div>
-                        </mat-toolbar>
-                        <div class="column-content">
-                            <button class="create-task-button" mat-raised-button [color]="odd ? 'accent' : 'primary'" (click)="openTask_.next({ board: board.data, states: states.data, state: state.data })">Create</button>
-                            <div class="tasks-container">
-                                <ng-container *ngIf="state.data.tasks$ | async as tasks; else loadingTmpl">
-                                    <ng-container *ngFor="let task of tasks">
-        
-                                        <mat-card mat-ripple (click)="openTask_.next({ board: board.data, task, states: states.data, state: state.data })">
-                                            <mat-card-header>
-                                                <mat-card-title>
-                                                    <div>
-                                                        <h4>{{ task.title }}</h4>
+                </mat-card>
+            </div>
+            <div id="columns-container">
+                <ng-container *ngIf="vm.states as states; else loadingTmpl">
+                    <ng-container  *ngFor="let state of states.data; let odd = odd">
+                        <div class="column">
+                            <mat-toolbar [color]="odd ? 'primary' : 'accent'">
+                                <div>
+                                    <h3>{{ state.data.title }}</h3>
+                                </div>
+                            </mat-toolbar>
+                            <div class="column-content">
+                                <button class="create-task-button" mat-raised-button [color]="odd ? 'accent' : 'primary'" (click)="openTask_.next({ board: board.data!, states: states.data, state: state.data })">Create</button>
+                                <div class="tasks-container">
+                                    <ng-container *ngIf="state.data.tasks$ | async as tasks; else loadingTmpl">
+                                        <ng-container *ngFor="let task of tasks">
+            
+                                            <mat-card mat-ripple (click)="openTask_.next({ board: board.data!, task, states: states.data, state: state.data })">
+                                                <mat-card-header>
+                                                    <mat-card-title>
+                                                        <div>
+                                                            <h4>{{ task.title }}</h4>
+                                                        </div>
+                                                    </mat-card-title>
+                                                </mat-card-header>
+                                                <mat-card-content>
+                                                    <div class="task-content">
+                                                        <span class="task-content-description">{{ task.description }}</span>
+            
+                                                        <span class="task-content-created-at">{{ task.createdAt | date : 'shortDate' }}</span>
                                                     </div>
-                                                </mat-card-title>
-                                            </mat-card-header>
-                                            <mat-card-content>
-                                                <div class="task-content">
-                                                    <span class="task-content-description">{{ task.description }}</span>
-        
-                                                    <span class="task-content-created-at">{{ task.createdAt | date : 'shortDate' }}</span>
-                                                </div>
-                                            </mat-card-content>
-                                        </mat-card>
-        
+                                                </mat-card-content>
+                                            </mat-card>
+            
+                                        </ng-container>
                                     </ng-container>
-                                </ng-container>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </ng-container>
+                    <ng-container *ngIf="states.stale">
+                        <div class="column stale">
+                            <mat-toolbar [color]="states.data.length % 2 == 1 ? 'primary' : 'accent'">
+                                <div id="text"></div>
+                            </mat-toolbar>
+                        </div>
+                    </ng-container>
                 </ng-container>
-                <ng-container *ngIf="states.stale">
-                    <div class="column stale">
-                        <mat-toolbar [color]="states.data.length % 2 == 1 ? 'primary' : 'accent'">
-                            <div id="text"></div>
-                        </mat-toolbar>
-                    </div>
-                </ng-container>
-            </ng-container>
-        </div>
+            </div>
+        </ng-container>
     </ng-container>
 </ng-container>
 
