--- a/src/app/pages/app-page/app-page.component.html
+++ b/src/app/pages/app-page/app-page.component.html
@@ -19,28 +19,30 @@
                     <div>
 
                         <ng-container *ngIf="vm.notifications as notifications">
-                            <button mat-icon-button [matMenuTriggerFor]="notificationMenu" [matBadge]="vm.unreadNotifications" [matBadgeHidden]="vm.unreadNotifications == 0" matBadgeColor="warn" style="font-size: .8rem;">
-                                <mat-icon>notifications</mat-icon>
-                            </button>
+                            <ng-container *ngIf="notifications.loaded">
+                                <button mat-icon-button [matMenuTriggerFor]="notificationMenu" [matBadge]="vm.unreadNotifications" [matBadgeHidden]="vm.unreadNotifications == 0" matBadgeColor="warn" style="font-size: .8rem;">
+                                    <mat-icon>notifications</mat-icon>
+                                </button>
 
-                            <mat-menu #notificationMenu="matMenu">
-                                <div id="notifications-menu">
-                                    <ng-container *ngFor="let notification of notifications">
-                                        <a class="notification-container" mat-menu-item [routerLink]="getNotificationLink(notification)">
-                                            <div class="notification-link">
-                                                <mat-icon *ngIf="!notification.read" color="accent">adjust</mat-icon>
-                                                <span>{{ notification.title }}</span>
-                                            </div>
-                                        </a>
-                                    </ng-container>
-                                </div>
-                                <mat-divider></mat-divider>
-                                <a style="text-decoration: none; color: unset;" mat-menu-item
-                                    routerLink="/app/notification">
-                                    <mat-icon color="primary">center_focus_weak</mat-icon>
-                                    <span>Notification Center</span>
-                                </a>
-                            </mat-menu>
+                                <mat-menu #notificationMenu="matMenu">
+                                    <div id="notifications-menu">
+                                        <ng-container *ngFor="let notification of sortNotifications(Object.values(notifications.data))">
+                                            <a class="notification-container" mat-menu-item [routerLink]="getNotificationLink(notification.data)">
+                                                <div class="notification-link">
+                                                    <mat-icon *ngIf="!notification.data.read" color="accent">adjust</mat-icon>
+                                                    <span>{{ notification.data.title }}</span>
+                                                </div>
+                                            </a>
+                                        </ng-container>
+                                    </div>
+                                    <mat-divider></mat-divider>
+                                    <a style="text-decoration: none; color: unset;" mat-menu-item
+                                        routerLink="/app/notification">
+                                        <mat-icon color="primary">center_focus_weak</mat-icon>
+                                        <span>Notification Center</span>
+                                    </a>
+                                </mat-menu>
+                            </ng-container>
                         </ng-container>
 
                         <button mat-icon-button [matMenuTriggerFor]="settingsMenu">
