--- a/src/app/pages/notification-list-page/notification-list-page.component.html
+++ b/src/app/pages/notification-list-page/notification-list-page.component.html
@@ -4,14 +4,14 @@
 } as vm">
     <div id="notification-list-container">
         <ng-container *ngIf="vm.notifications as notifications">
-            <ng-container *ngFor="let notification of notifications">
+            <ng-container *ngFor="let notification of sortNotifications(Object.values(notifications.data))">
                 <div class="notification-container">
-                    <a style="text-decoration: unset; color: unset;" [routerLink]="getNotificationLink(notification)">
+                    <a style="text-decoration: unset; color: unset;" [routerLink]="getNotificationLink(notification.data)">
                         <mat-card>
                             <div class="notification-title-container">
-                                <span>{{ notification.title }}</span>
-                                <ng-container *ngIf="!notification.read">
-                                    <button mat-icon-button color="accent" (click)="$event.preventDefault(); $event.stopPropagation(); readNotificationEmitter.next(notification)">
+                                <span>{{ notification.data.title }}</span>
+                                <ng-container *ngIf="!notification.data.read">
+                                    <button mat-icon-button color="accent" (click)="$event.preventDefault(); $event.stopPropagation(); readNotificationEmitter.next(notification.data)">
                                         <mat-icon>adjust</mat-icon>
                                     </button>
                                 </ng-container>
@@ -19,7 +19,7 @@
                                     <span></span>
                                 </ng-template>
                             </div>
-                            {{ notification.createdAt | date : 'shortDate' }}
+                            {{ notification.data.createdAt | date }}
                         </mat-card>
                     </a>
                 </div>
